[gd_scene load_steps=9 format=2]

[ext_resource path="res://Themes/DosisTres/DosisLevelSelectButton.tres" type="DynamicFont" id=1]
[ext_resource path="res://ui-assets/logo.png" type="Texture" id=2]
[ext_resource path="res://ui-assets/1920x1080_white.svg" type="Texture" id=3]
[ext_resource path="res://ui-assets/Buttons/Icons/IconExit.svg" type="Texture" id=4]
[ext_resource path="res://ui-assets/Buttons/Icons/IconPlay.svg" type="Texture" id=5]
[ext_resource path="res://Themes/ThemeMenuButton.tres" type="Theme" id=6]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=7]
[ext_resource path="res://ui-assets/Sounds/256116__kwahmah-02__click.ogg" type="AudioStream" id=9]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )

[node name="SoundClickPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -3.0

[node name="1920X1080White" type="Sprite" parent="."]
texture = ExtResource( 3 )
centered = false

[node name="LogoPNG" type="Sprite" parent="."]
position = Vector2( 960, 330 )
texture = ExtResource( 2 )

[node name="PlayExitContainer" type="GridContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = 100.0
margin_bottom = 260.0
custom_constants/vseparation = 16
custom_constants/hseparation = 120
columns = 4

[node name="SpacerL" type="NinePatchRect" parent="PlayExitContainer"]
margin_right = 620.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ButtonPlay" type="Button" parent="PlayExitContainer"]
margin_left = 740.0
margin_right = 900.0
margin_bottom = 160.0
size_flags_horizontal = 0
theme = ExtResource( 6 )
toggle_mode = true
icon = ExtResource( 5 )

[node name="ButtonExit" type="Button" parent="PlayExitContainer"]
margin_left = 1020.0
margin_right = 1180.0
margin_bottom = 160.0
theme = ExtResource( 6 )
icon = ExtResource( 4 )

[node name="SpacerR" type="NinePatchRect" parent="PlayExitContainer"]
margin_left = 1300.0
margin_right = 1920.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelsContainer" type="GridContainer" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 88.0
margin_top = 300.0
margin_right = -368.0
margin_bottom = 460.0
custom_constants/vseparation = 16
custom_constants/hseparation = 40
columns = 9

[node name="SpacerL" type="NinePatchRect" parent="LevelsContainer"]
margin_right = 12.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button0" type="Button" parent="LevelsContainer"]
margin_left = 52.0
margin_right = 212.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
text = "0"
clip_text = true

[node name="Button1" type="Button" parent="LevelsContainer"]
margin_left = 252.0
margin_right = 412.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
text = "1"
clip_text = true

[node name="Button2" type="Button" parent="LevelsContainer"]
margin_left = 452.0
margin_right = 612.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
text = "2"
clip_text = true

[node name="Button3" type="Button" parent="LevelsContainer"]
margin_left = 652.0
margin_right = 812.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
text = "3"
clip_text = true

[node name="Button4" type="Button" parent="LevelsContainer"]
margin_left = 852.0
margin_right = 1012.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
text = "4"
clip_text = true

[node name="Button5" type="Button" parent="LevelsContainer"]
margin_left = 1052.0
margin_right = 1212.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
text = "5"
clip_text = true

[node name="Button6" type="Button" parent="LevelsContainer"]
margin_left = 1252.0
margin_right = 1412.0
margin_bottom = 160.0
rect_min_size = Vector2( 160, 160 )
size_flags_horizontal = 0
theme = ExtResource( 6 )
custom_fonts/font = ExtResource( 1 )
text = "6"
clip_text = true

[node name="SpacerR" type="NinePatchRect" parent="LevelsContainer"]
margin_left = 1452.0
margin_right = 1464.0
margin_bottom = 160.0
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="PlayExitContainer/ButtonPlay" to="." method="_on_ButtonPlay_pressed"]
[connection signal="pressed" from="PlayExitContainer/ButtonExit" to="." method="_on_ButtonExit_pressed"]
[connection signal="pressed" from="LevelsContainer/Button0" to="." method="_on_Button0_pressed"]
[connection signal="pressed" from="LevelsContainer/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="LevelsContainer/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="LevelsContainer/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="LevelsContainer/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="LevelsContainer/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="LevelsContainer/Button6" to="." method="_on_Button6_pressed"]
